# distributeddatamgr_objectstore

./: BUILD.gn  CMakeLists.txt  README.en.md  README.md  README_zh.md  bundle.json  ohos.build
base/include/: js_native_api.h  js_native_api_types.h  native_node_api.h  native_value.h  node_api.h  securec.h
frameworks/include/common/: logger.h  macro.h  object_utils.h  string_utils.h  thread_pool.h
frameworks/include/communicator/: communicator.h  communicator_session.h  communicator_softbus_adapter.h  i_network_service.h  message.h  message_waiter.h  network.h  network_manager.h  network_types.h  rpc_network.h  rpc_session.h
frameworks/include/coordinator/: coordinate_engine.h  local_object_task.h  local_observers.h  message_decoder.h  object_observer.h  object_task_manager.h  observer_manager.h  operation.h  operation_dispatcher.h  operation_utils.h  remote_object_task.h  remote_observers.h
frameworks/include/coordinator/message/: delete_message.h  get_message.h  handshake_message.h  observe_message.h  publish_delete_message.h  publish_message.h  put_message.h
frameworks/include/object/: bytes.h  data_object.h  distributed_object_impl.h  distributed_objectstore_impl.h  distributed_objectstore_manager_impl.h  flat_object.h  flat_object_store.h  object_coordinator.h  object_id.h  object_store.h  object_store_executor.h  object_store_manager.h  watcher.h  watcher_holder.h
frameworks/innerkitsimpl/include/adaptor/: distributed_object_impl.h  distributed_objectstore_impl.h  flat_object.h  flat_object_storage_engine.h  flat_object_store.h
frameworks/innerkitsimpl/include/common/: bytes.h  logger.h  string_utils.h
frameworks/innerkitsimpl/src/adaptor/: distributed_object_impl.cpp  distributed_object_store_impl.cpp  flat_object.cpp  flat_object_storage_engine.cpp  flat_object_store.cpp
frameworks/jskitsimpl/include/adaptor/: js_common.h  js_distributedobject.h  js_distributedobjectstore.h  js_object_wrapper.h  js_watcher.h
frameworks/jskitsimpl/include/common/: js_util.h
frameworks/jskitsimpl/src/adaptor/: js_distributedobject.cpp  js_distributedobjectstore.cpp  js_module_init.cpp  js_object_wrapper.cpp  js_watcher.cpp
frameworks/jskitsimpl/src/common/: js_util.cpp
frameworks/src/common/: file_utils.cpp  object_utils.cpp  thread_pool.cpp
frameworks/src/communicator/: communicator.cpp  communicator_softbus_adapter.cpp  network.cpp  network_manager.cpp  rpc_network.cpp  rpc_session.cpp
frameworks/src/coordinator/: coordinate_engine.cpp  local_object_task.cpp  local_observers.cpp  message_decoder.cpp  object_task_manager.cpp  observer_manager.cpp  operation.cpp  operation_dispatcher.cpp  remote_object_task.cpp  remote_observers.cpp
frameworks/src/object/: distributed_object_impl.cpp  distributed_object_store_impl.cpp  distributed_objectstore_manager.cpp  distributed_objectstore_manager_impl.cpp  flat_object.cpp  flat_object_store.cpp  object_coordinator.cpp  object_store_executor.cpp  object_store_manager.cpp
frameworks/src/storage/: flat_object_storage_engine.cpp  flat_object_storage_engine.h  storage_engine.h
interfaces/innerkits/: BUILD.gn  distributed_object.h  distributed_objectstore.h  distributed_objectstore_manager.h  object_storage_engine.h  objectstore_errors.h  watcher.h
interfaces/jskits/: @ohos.data.distributeddataobject.d.ts  BUILD.gn  distributed_data_object.js
test/src/: objectstore_local_oper_unit_test.cpp
