# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

group("build_module") {
  deps = [ ":distributeddataobject" ]
}

config("objectstore_config") {
  visibility = [ ":*" ]

  cflags = [ "-frtti" ]

  include_dirs = [
    "../../frameworks/jskitsimpl/include/adaptor",
    "../../frameworks/innerkitsimpl/include/adaptor",
    "../../interfaces/innerkits",
    "//third_party/bounds_checking_function/include"
  ]
}

config("objectstore_public_config") {
  visibility = [ "//foundation/distributeddatamgr/objectstore:*" ]

  include_dirs = [ "." ]
}

ohos_shared_library("distributeddataobject") {
  part_name = "distributeddataobject"
  sources = [
    "../../frameworks/jskitsimpl/src/adaptor/js_distributedobjectstore.cpp",
    "../../frameworks/jskitsimpl/src/adaptor/js_watcher.cpp",
    "../../frameworks/jskitsimpl/src/adaptor/js_distributedobject.cpp",
    "../../frameworks/jskitsimpl/src/adaptor/js_object_wrapper.cpp",
    "../../frameworks/jskitsimpl/src/adaptor/js_module_init.cpp",
    "../../frameworks/innerkitsimpl/src/adaptor/distributed_object_store_impl.cpp",
  ]

  configs = [ ":objectstore_config" ]

  deps = [
      "//foundation/ace/napi:ace_napi",
      "//utils/native/base:utils",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "samgr_standard:samgr_proxy",
  ]

  public_configs = [ ":objectstore_public_config" ]

  subsystem_name = "distributeddataobject"
}
